Refactor 'my-element' to 'initial-sh' with expanded functionality
The 'my-element' component has been fully refactored into 'initial-sh', featuring a Quake-style console UI with commands like 'init', 'help', 'exit', and mock SEO/Lighthouse tools. Additional plugin-based extensibility and developer interaction capabilities were introduced, replacing previous functionality with a more robust and modular implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+/var/
 /node_modules/
 /lib/
 /test/
 custom-elements.json
 # top level source
-my-element.js
-my-element.js.map
-my-element.d.ts
-my-element.d.ts.map
+initial-sh.js
+initial-sh.js.map
+initial-sh.d.ts
+initial-sh.d.ts.map
 # only generated for size check
-my-element.bundled.js
+initial-sh.bundled.js
