--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "@lit/lit-starter-ts",
-  "private": true,
-  "version": "2.0.2",
-  "description": "A simple web component",
-  "main": "my-element.js",
-  "module": "my-element.js",
+  "name": "@initial.sh/initial-sh",
+  "version": "0.1.0",
+  "description": "The Initial Console for webmasters",
+  "main": "initial-sh.js",
+  "module": "initial-sh.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "clean": "rimraf my-element.{d.ts,d.ts.map,js,js.map} test/my-element.{d.ts,d.ts.map,js,js.map} test/my-element_test.{d.ts,d.ts.map,js,js.map}",
+    "clean": "rimraf initial.{d.ts,d.ts.map,js,js.map} test/initial.{d.ts,d.ts.map,js,js.map} test/initial_test.{d.ts,d.ts.map,js,js.map}",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.ts'",
     "lint:lit-analyzer": "lit-analyzer",
@@ -18,7 +17,7 @@
     "docs:clean": "rimraf docs",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
-    "docs:build": "rollup -c --file docs/my-element.bundled.js",
+    "docs:build": "rollup -c --file docs/initial.bundled.js",
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "wds --root-dir=docs --node-resolve --watch",
     "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
@@ -30,16 +29,16 @@
     "test:watch": "wtr --watch",
     "test:prod": "MODE=prod wtr",
     "test:prod:watch": "MODE=prod wtr --watch",
-    "checksize": "rollup -c ; cat my-element.bundled.js | gzip -9 | wc -c ; rm my-element.bundled.js"
+    "checksize": "rollup -c ; cat initial.bundled.js | gzip -9 | wc -c ; rm initial.bundled.js"
   },
   "keywords": [
     "web-components",
     "lit-element",
-    "typescript",
-    "lit"
+    "console",
+    "initial"
   ],
-  "author": "Google LLC",
-  "license": "BSD-3-Clause",
+  "author": "Gilles Hoarau (https://github.com/unicolored)",
+  "license": "MIT",
   "dependencies": {
     "lit": "^3.2.0"
   },
