--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "author": "Gilles Hoarau (https://github.com/unicolored)",
   "license": "MIT",
   "dependencies": {
-    "lit": "^3.2.0"
+    "lit": "^3.2.0",
+    "rollup-plugin-postcss": "^4.0.2"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
