--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "license": "MIT",
   "dependencies": {
     "lit": "^3.2.0",
-    "rollup-plugin-postcss": "^4.0.2"
+    "postcss": "^8.5.3"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
@@ -63,6 +63,7 @@
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "rollup": "^4.18.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-summary": "^2.0.1",
     "typescript": "~5.5.0"
   },
