Add TypeScript types and update build configuration
Added a "types" field in package.json to include TypeScript declaration files. Adjusted tsconfig.json settings for compatibility, including changing the module target to ES2015 and disabling useDefineForClassFields. Corrected an import statement and removed the LICENSE file.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "initial-sh.js",
   "module": "initial-sh.js",
   "type": "module",
+  "types": "initial-sh.d.ts",
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
