--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2021",
-    "module": "es2020",
+    "module": "es2015",
     "lib": ["es2021", "DOM", "DOM.Iterable"],
     "declaration": true,
     "declarationMap": true,
@@ -10,6 +10,7 @@
     "outDir": "./",
     "rootDir": "./src",
     "strict": true,
+    "useDefineForClassFields": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
