--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@initial.sh/initial-sh",
+  "name": "initial-sh",
   "version": "0.2.0",
   "description": "The Initial Console for webmasters",
   "main": "initial-sh.js",
