Update build and scripts to use local bundled JS file
Replaced the external script reference with a local bundled file for better control and consistency. Adjusted related build script and dependency links to reflect this change. Removed unused script tags and cleaned up old references in the documentation and templates.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "docs:clean": "rimraf docs",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
-    "docs:build": "rollup -c --file docs/initial.bundled.js",
+    "docs:build": "rollup -c --file docs/initial-sh.bundled.js",
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "wds --root-dir=docs --node-resolve --watch",
     "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
