Add initial-sh JavaScript bundle for interactive console UI
Introduce `initial-sh.bundled.js` with styles, commands, and functionality for a customizable, interactive terminal-like component. Implements features such as core commands, plugin support, input handling, and responsive design elements.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 /node_modules/
 /lib/
 /test/
-custom-elements.json
+/custom-elements.json
 # top level source
-initial-sh.js
-initial-sh.js.map
-initial-sh.d.ts
-initial-sh.d.ts.map
+/initial-sh.js
+/initial-sh.js.map
+/initial-sh.d.ts
+/initial-sh.d.ts.map
 # only generated for size check
-initial-sh.bundled.js
+/initial-sh.bundled.js
