Remove outdated API docs and add publish workflow
The old `docs/api/index.html` was removed as it is no longer relevant. A GitHub Action workflow was introduced to automate npm publishing and documentation updates on pushes or merged pull requests. Additionally, repository information in `package.json` was updated for better accuracy.

--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     "*.ts",
     "*.map"
   ],
-  "repository": "https://github.com/unicolored/initial-sh",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unicolored/initial.term.git"
+  },
   "customElements": "custom-elements.json"
 }
