Remove package-lock.json file.
The package-lock.json file was deleted to prevent dependency locking for the project. This ensures a more flexible and dynamic dependency resolution process across environments.

--- a/package.json
+++ b/package.json
@@ -87,5 +87,6 @@
     "type": "git",
     "url": "https://github.com/unicolored/initial.term.git"
   },
-  "customElements": "custom-elements.json"
+  "customElements": "custom-elements.json",
+  "packageManager": "yarn@4.7.0"
 }
