--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "eslint": "^8.15.0",
     "lit-analyzer": "^1.2.1",
+    "mocha": "11.1.0",
     "postcss": "^8.5.3",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
