Disable publish workflow trigger on push events
The workflow is now only triggered on pull requests to the main branch. This change prevents unnecessary executions on direct pushes, streamlining the CI process.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish to npm and Update Docs
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   pull_request:
     branches:
       - main
