Enable publishing on push to main branch
Reactivated the workflow to trigger on pushes to the main branch instead of pull request closures. This ensures updates and publishing occur directly following merges into the main branch.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,14 @@
 name: Publish to npm and Update Docs
 
 on:
-#  push:
-#    branches:
-#      - main
-  pull_request:
+  push:
     branches:
       - main
-    types:
-      - closed
+#  pull_request:
+#    branches:
+#      - main
+#    types:
+#      - closed
 
 jobs:
   publish-and-update:
