--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Docs
 
 on:
   push:
@@ -9,12 +9,30 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - name: Generate Docs
-      run: yarn docs
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # Deploy to GitHub Pages
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        folder: docs
-        branch: gh-pages
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22' # Using Node.js 22 as requested
+          registry-url: 'https://registry.npmjs.org'
+
+      # Enable and prepare Corepack
+      - name: Enable Corepack
+        run: |
+          corepack enable
+          corepack prepare yarn@stable --activate
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Generate Docs
+        run: yarn docs
+
+      # Deploy to GitHub Pages
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: docs
+          branch: gh-pages
