Refactor "initial-sh" terminal component to "initial-console"
Renamed the "initial-sh" component and related files to "initial-console" for better naming clarity. Updated all references, including custom element names, TypeScript class names, and test cases. Adjusted .gitignore and demo files to accommodate the new naming convention.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 /test/
 /custom-elements.json
 # top level source
-/initial-sh.js
-/initial-sh.js.map
-/initial-sh.d.ts
-/initial-sh.d.ts.map
+/initial-*.js
+/initial-*.js.map
+/initial-*.d.ts
+/initial-*.d.ts.map
 # only generated for size check
 /initial-sh.bundled.js
