--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,21 +4,14 @@ on:
   push:
     branches:
       - main
-#  pull_request:
-#    branches:
-#      - main
-#    types:
-#      - closed
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '22' # Using Node.js 22 as requested
           registry-url: 'https://registry.npmjs.org'
@@ -29,13 +22,9 @@ jobs:
           corepack enable
           corepack prepare yarn@stable --activate
 
-      - name: Install dependencies
-        run: yarn install
+      - run: yarn install
+      - run: sh script/cibuild.sh
 
-      - name: Build
-        run: yarn build
-
-      - name: Publish to npm
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
