--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "initial-sh.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && rollup -c",
     "build:watch": "tsc --watch",
     "clean": "rimraf initial.{d.ts,d.ts.map,js,js.map} test/initial.{d.ts,d.ts.map,js,js.map} test/initial_test.{d.ts,d.ts.map,js,js.map}",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
@@ -31,7 +31,7 @@
     "test:watch": "wtr --watch",
     "test:prod": "MODE=prod wtr",
     "test:prod:watch": "MODE=prod wtr --watch",
-    "checksize": "rollup -c ; cat initial.bundled.js | gzip -9 | wc -c ; rm initial.bundled.js"
+    "checksize": "rollup -c ; cat initial-sh.bundled.js | gzip -9 | wc -c ; rm initial-sh.bundled.js"
   },
   "dependencies": {
     "@types/mocha": "^10.0.10",
