Remove debug logs, update build and documentation flow
This commit removes unused `console.log` calls from `initial-terminal.ts`, updates the build script to include documentation generation, and updates related file references in the documentation setup to define a new bundled script.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "types": "initial-sh.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc && rollup -c",
+    "build": "tsc",
     "build:watch": "tsc --watch",
+    "build:prod": "yarn build ; rollup -c",
     "clean": "rimraf initial.{d.ts,d.ts.map,js,js.map} test/initial.{d.ts,d.ts.map,js,js.map} test/initial_test.{d.ts,d.ts.map,js,js.map}",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.ts'",
@@ -19,7 +20,7 @@
     "docs:clean": "rimraf docs",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
-    "docs:build": "rollup -c --file docs/initial-sh.bundled.js",
+    "docs:build": "rollup -c --file docs/initial-sh.docs.js",
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "wds --root-dir=docs --node-resolve --base-path=/initial.term --watch",
     "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
