--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "lint:lit-analyzer": "lit-analyzer",
     "check": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --check",
     "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --write",
-    "docs": "npm run docs:clean && npm run build && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
+    "docs": "npm run docs:clean && npm run build:prod && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
     "docs:clean": "rimraf docs",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
     "docs:build": "rollup -c --file docs/initial-sh.docs.js",
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
-    "docs:serve": "wds --root-dir=docs --node-resolve --base-path=/initial.term --watch",
+    "docs:serve": "wds --root-dir=docs --node-resolve --watch",
     "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
     "analyze:watch": "cem analyze --litelement --globs \"src/**/*.ts\" --watch",
     "serve": "wds --watch",
