--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "dependencies": {
     "@types/mocha": "^10.0.10",
-    "lit": "^3.2.0"
+    "lit": "^3.2.0",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
