--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:lit-analyzer": "lit-analyzer",
     "check": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --check",
     "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --write",
-    "docs": "npm run docs:clean && npm run build:prod && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
+    "docs": "npm run docs:clean && npm run build:prod && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen && mv ./docs/node_modules ./docs/modules",
     "docs:clean": "rimraf docs",
     "docs:gen": "eleventy --config=.eleventy.cjs",
     "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
