Update repository URL in package.json
Changed the repository URL to use the `git+https` protocol for consistency and compatibility with certain tools. No functional changes to the package are introduced.

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/unicolored/initial.term.git"
+    "url": "git+https://github.com/unicolored/initial.term.git"
   },
   "customElements": "custom-elements.json",
   "packageManager": "yarn@4.8.1"
